--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -290,7 +290,8 @@
 
                     <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                     <div style="display: flex;">
-                        <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"  *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 "
+                        <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"  
+                        *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 "
                             style="background-color: #ee7f25;    
                             color: white;
                             min-width: 20px;
@@ -304,7 +305,8 @@
 
                     <div style="display: flex;gap: 60px;flex-direction: column;">
                         <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
-                            <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)"  *ngIf="criteria.RATE>0 && y != 0 " 
+                            <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)"  
+                            *ngIf="criteria.RATE>0 && y != 0 " 
                             style="background-color: #ee7f25;    
                              color: white;
                              min-width: 20px;
@@ -359,7 +361,7 @@
             <div class="test-name-table" *ngIf="(y != 0)" [style.height]="(selectedCard == y)?'':'45px'">
 
                  <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
-                 <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
+                 <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
                  *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " 
                  style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
                  height: 30px;
