--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -189,13 +189,14 @@
 
         </div>
 
-
+       <!-- //COVGOZE, DYZPELVID, ジズペルビド , EQMANI, BETACOZ, COVGOZE, DYZPELVID , -->
         <!-- EMOJIES  -->
-        <!-- <div *ngIf="isEmojiTime mat-elevation-z4" cdkDrag class="test-emoji">
+ジズペルビド ,,😕MaybeName,❤️ MyFavoriteName,🐣 ANONYMOUS_NAME,COVID-256👾,COVI 😷-19,🤯ASPIRINA,[̲̅ə̲̅٨̲̅٥̲̅٦̲̅,🩸Dropping,⋆⋆⃟⊱✪⃝⃞⃝⊰⋆⃟⋆⋆ ◤,🏃‍♂️三三☲=💨,ı̴̴̡̡̡ ̡͌l̡̡̡ ̡͌l̡*̡̡ ̴̡ı̴̴̡ ̡̡͡|̲̲̲͡͡͡ ̲▫̲͡ ̲̲̲͡͡π̲̲͡͡ ̲̲͡▫̲̲͡͡ ̲|̡̡̡ ̡ ̴̡ı̴̡̡ ̡͌l̡̡̡̡._2, -->
+
+        <div *ngIf="isEmojiTime mat-elevation-z4" cdkDrag class="test-emoji">
             <div class="example-handle" cdkDragHandle>
                 <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
                   <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
-                  <path d="M0 0h24v24H0z" fill="none"></path>
                 </svg>
               </div>
             <div class="tab-1">
