--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
@@ -152,6 +152,15 @@
   color: grey;
 }
 
+.add-column-active {
+  outline: none;
+  float: right;
+  
+  mat-icon{
+    color: #324395;
+  }
+}
+
 
 .test-name-table:hover {
   @include BoxShadow(6);
