--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
@@ -157,7 +157,14 @@
   color: grey;
 }
 
-
+.add-column-active {
+  outline: none;
+  float: right;
+  
+  mat-icon{
+    color: #324395;
+  }
+}
 
 .image-row {
   display: flex;
