--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
@@ -167,6 +167,14 @@
   float: right;
   color: grey;
 }
+.add-column-active {
+  outline: none;
+  float: right;
+  
+  mat-icon{
+    color: #324395;
+  }
+}
 
 .test-name-table:hover {
   @include BoxShadow(6);
