--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -24,12 +24,24 @@
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
     </button>
-    <button (click)="editSingleTableCells = !editSingleTableCells" class="add-column" style="margin: -50px 185px;"
+    <button (click)="editSingleTableCells = !editSingleTableCells" 
+        [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" style="margin: -50px 195px;"
         matTooltip="edit tabel cells" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
     </button>
-    <button (click)="toogleColumnResizer()" class="add-column" style="margin: -50px 215px;" matTooltip="row settings"
-        matTooltipPosition="above" mat-icon-button aria-label="ranking">
+    <button (click)="dragRows = !dragRows" 
+        [ngClass]="(!dragRows)?'add-column':'add-column-active'" style="margin: -50px  225px;"
+        matTooltip="drag rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+        <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
+    </button>
+    <button (click)="deleteRows = !deleteRows" 
+        [ngClass]="(!deleteRows)?'add-column':'add-column-active'" style="margin: -50px 255px;"
+        matTooltip="delete rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+        <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
+    </button>
+    <button (click)="isColumnResizerOn = !isColumnResizerOn" 
+        [ngClass]="(!isColumnResizerOn)?'add-column':'add-column-active'" style="margin: -50px 290px;" 
+        matTooltip="columns width" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">swap_horizontal_circle</mat-icon>
     </button>
 
@@ -185,12 +197,11 @@
         </div>
         <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;">
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
-
     </div>
-    <div class="scroller-style main-container" dragula="DRAGGABLE_ROW" [(dragulaModel)]="bmxItem.componentText"
+    <div class="scroller-style main-container" [dragula]="(dragRows)?'DRAGGABLE_ROW':''" [(dragulaModel)]="bmxItem.componentText"
         (dragulaModelChange)="checkDragEvetn($event);">
 
-        <div *ngFor="let testName of bmxItem.componentText; let y = index">
+        <div *ngFor="let testName of bmxItem.componentText; let y = index" >
 
             <!-- <div *ngIf="(y !== 0)" style="color: white;font-size: xx-small;">.</div> -->
             <div class="test-name-table">
@@ -210,7 +221,7 @@
 
                         <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
-                        <textarea *ngIf="y == 0 && editSingleTableCells"
+                        <textarea *ngIf="editSingleTableCells"
                             [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                             style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
                             [(ngModel)]="testName[columnName]" value="testName[columnName]"></textarea>
@@ -280,7 +291,7 @@
                         </div>
                         <ng-template #elseBlock>
                             <div style="position: relative;top: -5px;">
-                                <mat-icon  matRipple  *ngFor="let star of  testName.STARS; let x =  index"
+                                <mat-icon matRipple *ngFor="let star of  testName.STARS; let x =  index"
                                     (click)="setRating(star.id,y)" [ngClass]="star.styleClass"
                                     (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
                                     style="outline: none;margin:1px -1px;cursor: pointer;">{{star.icon}}</mat-icon>
@@ -290,9 +301,8 @@
 
                     <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                     <div style="display: flex;">
-                        <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"  
-                        *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 "
-                            style="background-color: #ee7f25;    
+                        <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
+                            *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;    
                             color: white;
                             min-width: 20px;
                             line-height: 19px;
@@ -305,9 +315,8 @@
 
                     <div style="display: flex;gap: 60px;flex-direction: column;">
                         <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
-                            <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)"  
-                            *ngIf="criteria.RATE>0 && y != 0 " 
-                            style="background-color: #ee7f25;    
+                            <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)"
+                                *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
                              color: white;
                              min-width: 20px;
                              line-height: 19px;
@@ -329,8 +338,8 @@
                 </div>
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ END STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
 
-                <div *ngIf="(y !== 0) && bmxClientPageOverview"
-                    style="min-width: 100px; position: absolute;right: 0px;">
+                <div *ngIf="(y !== 0) && bmxClientPageOverview && deleteRows"
+                    style="min-width: 100px; position: absolute;right: 0px;display: flex;">
                     <button style="outline: none;margin:3px -8px;" (dblclick)="deletRow(y)" mat-icon-button
                         matTooltip="doble click to delete row" matTooltipPosition="left" aria-label="ranking">
                         <mat-icon>delete_outline</mat-icon>
@@ -360,31 +369,29 @@
 
             <div class="test-name-table" *ngIf="(y != 0)" [style.height]="(selectedCard == y)?'':'45px'">
 
-                 <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
-                 <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
-                 *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " 
-                 style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
+                <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
+                <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
+                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
                  height: 30px;
                  line-height: 30px;right: 7px;
                  position: absolute;animation: rubberBand 700ms ease-in  forwards;"
-                 mat-icon-button>{{bmxItem.componentText[y]['RATE']}}</button>
-             <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+                    mat-icon-button>{{bmxItem.componentText[y]['RATE']}}</button>
+                <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
 
-             <div style="display: flex;gap: 23px;padding-top: 10px;position: absolute;right: 24px;">
-                 <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
-                     <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)"
-                      *ngIf="criteria.RATE>0 && y != 0 "
-                       style="background-color: #ee7f25;    
+                <div style="display: flex;gap: 23px;padding-top: 10px;position: absolute;right: 24px;">
+                    <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
+                        <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)" *ngIf="criteria.RATE>0 && y != 0 "
+                            style="background-color: #ee7f25;    
                           color: white;
                           min-width: 20px;
                           line-height: 19px;
                           padding: 2px 0px;
                           position: absolute;
                           animation: rubberBand 700ms ease-in  forwards;" mat-button>{{criteria.RATE}}</button>
-                 </div>
-             </div>
-              <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
+                    </div>
+                </div>
+                <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                 <div *ngFor="let columnName of columnsNames; let e =  index">
                     <!-- <div *ngIf="(y == 0)" class="header-title " >
                         <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;"
