--- a/src/app/bmx/bmx-creator/respondents/respondents.component.html
+++ b/src/app/bmx/bmx-creator/respondents/respondents.component.html
@@ -63,10 +63,10 @@
     
                          </td>
                 </ng-container>
-                <ng-container matColumnDef="group">
+                <ng-container matColumnDef="Type">
                     <th mat-header-cell *matHeaderCellDef style="width: 5%;"> Group </th>
                     <td mat-cell *matCellDef="let element"> 
-                        <input matInput placeholder="" [value]="element.group" [(ngModel)]="element.group" (focusout)="onFocusOutEvent($event)">
+                        <input matInput placeholder="" [value]="element.Type" [(ngModel)]="element.Type" (focusout)="onFocusOutEvent($event)">
     
                          </td>
                 </ng-container>
