--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -10,6 +10,11 @@
             <mat-icon class="full-icon" style="font-size: 35px;">fullscreen
             </mat-icon>
         </button>
+        <button (click)="saveUserAnswers()" mat-icon-button matTooltip="design tools" matTooltipPosition="above" 
+        *ngIf="true" style="position: absolute;bottom: 9px;color: grey;z-index: 9999999999;right: 66px;outline: none;" >
+            <mat-icon class="full-icon" style="font-size: 35px;">save
+            </mat-icon>
+        </button>
     </div>
     <div class="display">
         <div style="flex-direction: column;" class="bmx-page" *ngIf="true">
