--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -10,7 +10,7 @@
             <mat-icon class="full-icon" style="font-size: 35px;">fullscreen
             </mat-icon>
         </button>
-        <button (click)="saveUserAnswers()" mat-icon-button matTooltip="design tools" matTooltipPosition="above" 
+        <button (click)="saveUserAnswers()" mat-icon-button matTooltip="save answers" matTooltipPosition="above" 
         *ngIf="true" style="position: absolute;bottom: 9px;color: grey;z-index: 9999999999;right: 66px;outline: none;" >
             <mat-icon class="full-icon" style="font-size: 35px;">save
             </mat-icon>
