testing tenmplates , brand matrix and user answers

--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -150,15 +150,15 @@
     <div class="project-info" *ngIf="bmxClientPageOverview">
 
         <div style="display: flex;flex-direction: column;margin-top: 50px;">
-            <button (click)="createNewBmxComponent('logo-header')" mat-icon-button matTooltip="add header"
+            <button (click)="createNewBmxComponent('logo-header')" mat-icon-button matTooltip="header"
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">account_circle</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('text-editor')" mat-icon-button matTooltip="add paragraph"
+            <button (click)="createNewBmxComponent('text-editor')" mat-icon-button matTooltip="paragraph"
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">article</mat-icon>
             </button>
-            <button (click)="createNewBmxComponent('rate-scale')" matTooltip="rating matrix" matTooltipPosition="right"
+            <button (click)="createNewBmxComponent('rate-scale')" matTooltip="rate matrix" matTooltipPosition="right"
                 mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">star_border</mat-icon>
             </button>
