--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -102,5 +102,10 @@
     background: #324395 !important;
   }
   
+  ::ng-deep .mat-tooltip {
+    background-color: #324395;
+    font-size: 18px;
+  }
+  
 
 
