--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -168,4 +168,9 @@
     color: white !important;
     background: #324395 !important;
   }
+
+::ng-deep .mat-tooltip {
+    background-color: #324395;
+    font-size: 18px;
+  }
   
